lasted update, problem with mempcy and score_list

--- a/Project-TLC-game/.vscode/settings.json
+++ b/Project-TLC-game/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "graphics.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "stdbool.h": "c"
     }
 }
